# DAVE

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  README.md  README.rst  README.txt  SECURITY.md  build_and_install.py  dave.yml  make_proplist.py  make_proplist2.py  make_pydoc3.py  proplist.csv  pyproject.toml  requirements.txt  run.bat  setup.cfg  setup.py  start_gui.py
docs/: Makefile  Solver_gui_control.md  animation.md  assets_and_resources.rst  components.md  conf.py  dissolve.md  documentation_generation.md  groups.md  index.rst  limits.md  managed_nodes.rst  nodes_reference.md  nodetree.rst  observers.rst  package_structure.rst  requirements.txt  scene_and_nodes.rst  tags.md  visuals.md  vtk_interaction_style.py  watches.md
gui2/: main_form.ui  run.bat  widget_airy.ui  widget_ballastconfiguration.ui  widget_ballastsolver.ui  widget_modeshapes.ui  widget_stability_displ.ui
guis/: addnode_form.ui  cube_open.pdn  dialog_edit_watch.ui  dialog_missing_item.ui  dlg_export_package.ui  dlg_export_to_blender.ui  dlg_node_prop_select.ui  dlg_settings.ui  dlg_solver.ui  frm_animation.ui  frm_standard_assets.ui  icons.xcf  icons_blue.xcf  main_form.ui  menu_nodetypes.ui  resource_browser.ui  resources.qrc  run.bat  solverdialog_threaded.ui  widget_airy.ui  widget_area.ui  widget_axis.ui  widget_ballastconfiguration.ui  widget_ballastsolver.ui  widget_beam.ui  widget_bendingmomentpreview.ui  widget_body.ui  widget_buoyancy.ui  widget_cable.ui  widget_component.ui  widget_con2d.ui  widget_connections.ui  widget_contactball.ui  widget_dynprop.ui  widget_explore.ui  (+24 more)
(+699 files in other folders)
