[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
include = [
  "/src/DAVE/resources/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/DAVE"]


[project]
name = "useDAVE"
version = "24.0523"
authors = [
  { name="Ruben de Bruin", email="info@rdbr.nl" },
]
description = "Design Analysis Visualization Engineering (or Difficult Analysis Very Easy)!"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://usedave.nl"
Issues = "https://github.com/RubendeBruin/DAVE"
